# bid-check-similarity

./: .gitignore  .npmignore  LICENSE  README.md  build_exe_py38.ps1  build_macos.sh  package.json  pyproject.toml  requirements-win38.txt  run_app.py
checksim/: __init__.py  engine.py  keyword_rules.py  legacy.py  models.py  parsers.py  report.py  text.py  ui.py
examples/: case.example.json
packaging/: release-notes-v0.1.0.md  release-notes-v0.2.0.md  release-notes-v0.2.1.md  release-notes-v0.2.2.md  release-notes-v0.2.3.md  release-notes-v0.2.4.md  release-notes-v0.2.5.md  release-notes-v0.2.6.md  release-notes-v0.2.7.md
packaging/build_sitecustomize/: sitecustomize.py
sample_cases/demo_4_groups/: case.json  招标文件.docx
sample_cases/demo_4_groups/A_晨星信息技术有限公司/: 晨星投标文件.docx
sample_cases/demo_4_groups/B_凌云数据服务有限公司/: 凌云投标文件.docx
sample_cases/demo_4_groups/C_北辰软件工程有限公司/: 北辰投标文件.docx
sample_cases/demo_4_groups/D_青禾数字科技有限公司/: 青禾投标文件.md
sample_cases/demo_4_groups_long/: case.json  招标文件.docx
sample_cases/demo_4_groups_long/A_晨星信息技术有限公司/: 晨星投标文件.docx
sample_cases/demo_4_groups_long/B_凌云数据服务有限公司/: 凌云投标文件.docx
sample_cases/demo_4_groups_long/C_北辰软件工程有限公司/: 北辰投标文件.docx
sample_cases/demo_4_groups_long/D_青禾数字科技有限公司/: 青禾投标文件.md
scripts/: cache_ppocr_models.py  install-skill.js  perf_smoke.py  sync_skill_vendor.py
skills/bid-check-similarity/: SKILL.md
skills/bid-check-similarity/agents/: openai.yaml
skills/bid-check-similarity/references/: config-schema.md
tests/: test_engine.py  test_skill_bundle.py  test_ui.py
(+3 files in other folders)
