[project]
name = "checksim"
version = "0.2.4"
description = "Offline bid/document similarity checker"
requires-python = ">=3.8"
dependencies = [
  "python-docx>=1.1.0",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
md = [
  "markdown>=3.5",
  "beautifulsoup4>=4.12",
]

[tool.setuptools]
packages = ["checksim"]

[project.scripts]
checksim = "checksim.cli:main"
checksim-gui = "checksim.ui:main"
