[project]
name = "checksim"
version = "0.2.7"
description = "Offline bid/document similarity checker"
requires-python = ">=3.8"
dependencies = [
  "python-docx>=1.1.0",
  "Pillow>=10.0.0",
  "pypdf>=4.0.0",
]

[project.optional-dependencies]
md = [
  "markdown>=3.5",
  "beautifulsoup4>=4.12",
]
ocr = [
  "paddleocr==3.7.0",
  "onnxruntime>=1.19,<1.28",
  "pypdfium2>=5.0",
]

[tool.setuptools]
packages = ["checksim"]

[project.scripts]
checksim = "checksim.cli:main"
checksim-gui = "checksim.ui:main"
